# hypernote

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: release.yml
dev/: README.md  agent-contributor.md  cli-agent-ergonomics-rollout.md  current-architecture.md  module-map.md  release.md  testing-and-verification.md
docs/: README.md  browser-regression-spec.md  cli.md  getting-started.md  runtime-model.md  sdk.md
hypernote/: __init__.py  actor_ledger.py  errors.py  execution_orchestrator.py  runtime_manager.py  sdk.py
hypernote/cli/: main.py
hypernote/mcp/: server.py
hypernote/server/: extension.py  handlers.py  jupyter_backends.py  subshell.py
jupyterlab_hypernote/: package.json  tsconfig.json
jupyterlab_hypernote/src/: client.ts  index.ts  status_widget.ts
jupyterlab_hypernote/style/: index.css
src/hypernote/: actor_ledger.py  execution_orchestrator.py  runtime_manager.py  sdk.py
src/hypernote/cli/: main.py
src/hypernote/server/: extension.py  handlers.py  subshell.py
tests/: conftest.py  helpers.py  test_actor_ledger.py  test_browser_regression.py  test_browser_validation.py  test_cli.py  test_execution_orchestrator.py  test_handlers.py  test_integration.py  test_live_server.py  test_mcp_server.py  test_package_metadata.py  test_runtime_manager.py  test_sdk.py  test_server_extension.py  test_shared_notebook_accessor.py  test_subshell.py
