[project]
name = "hypernote"
version = "0.1.0"
description = "Thin control plane for Jupyter notebook execution with jobs, attribution, and runtime lifecycle"
requires-python = ">=3.11"
dependencies = [
    "jupyter-server>=2.0",
    "jupyter-collaboration>=3.0",
    "jupyter-server-nbmodel>=0.1",
    "jupyter-ydoc>=2.0",
    "pycrdt>=0.12",
    "pycrdt-websocket>=0.15",
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "playwright>=1.40",
    "ruff>=0.8",
]

[project.scripts]
hypernote = "hypernote.cli.main:cli"

[project.entry-points."jupyter_server.extensions"]
hypernote = "hypernote"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
