[project]
name = "hypernote"
version = "0.1.3"
description = "Thin control plane for Jupyter notebook execution with jobs, attribution, and runtime lifecycle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter-server>=2.0",
    "jupyter-server-nbmodel>=0.1",
    "jupyter-server-ydoc>=1.0",
    "pycrdt>=0.12",
    "click>=8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/gilad-rubin/hypernote"
Repository = "https://github.com/gilad-rubin/hypernote"
Issues = "https://github.com/gilad-rubin/hypernote/issues"

[project.optional-dependencies]
dev = [
    "jupyter-collaboration>=3.0",
    "jupyterlab>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "playwright>=1.40",
    "ruff>=0.8",
]
lab = [
    "jupyter-collaboration>=3.0",
]

[project.scripts]
hypernote = "hypernote.cli.main:cli"

[project.entry-points."jupyter_server.extensions"]
hypernote = "hypernote"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
